--- a/clon-de-google/css/style-mobile.css
+++ b/clon-de-google/css/style-mobile.css
@@ -2,6 +2,13 @@
     --menu__item--color: #5F6368;
     --hn__button--color: #1a73e8;
     --hn__button-text--color: #fff;
+    --buscador__container--br-color: #E7E9EB;
+    --botones__container--ipt-color: #F8F9FA;
+    --botones__container--ipt-br-color: rgb(248,249,250);
+    --buscador__container--hvr-bs-config: 0.5px 0.5px 5px 0.3px #b4b2b2;
+    --botones__container--ipt-hvr-bg-color: #f8f9fa;
+    --botones__container--ipt-hvr-br-color: #dadce0;
+    --botones__container--ipt-hvr-bs-config: 0 1px 1px rgba(0,0,0,.1);
 }
 
 * {
@@ -58,6 +65,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 70%;
 }
 .main__content figure {
     width: 100%;
@@ -69,6 +77,51 @@ body {
     text-align: center;
     margin: 0 auto;
     
-  
+
+}
+.buscador__container {
+    display: flex;
+    width: 90%;
+    align-self: center;
+    justify-content: center;
+    padding: 1em;
+    border: 0.1rem solid var(--buscador__container--br-color);
+    border-radius: 2em;
+    margin-top: 2rem;
     
+}
+.buscador__container:hover, .active {
+    box-shadow:   var(--buscador__container--hvr-bs-config);
+}
+
+.container__img img {
+    width: 100%;
+   
+}
+.buscador__container--ipt {
+    border: none;
+    outline: none;
+    flex-grow: 1;
+    padding: 0 1rem;
+}
+.botones__container {
+    display: flex;
+    margin: 0 auto;
+    width: min-content;
+    height: 20%;
+    align-self: center;
+    padding-top: 1.8rem;
+}
+.botones__container input {
+    margin: 1.1rem 0.4rem;
+    padding: 0 1.6rem;
+    border: none;
+    border-radius: 0.4rem;
+    height: 60%;
+    background-color: var(--botones__container--ipt-color);
+}
+.botones__container input:hover {
+    border: 0.1rem solid var(--botones__container--ipt-hvr-br-color);
+    background-color: var(--botones__container--ipt-hvr-bg-color);
+    box-shadow: var(--botones__container--ipt-hvr-bs-config);
 }
