--- a/clon-de-google/css/style-mobile.css
+++ b/clon-de-google/css/style-mobile.css
@@ -12,6 +12,8 @@
     --botones__container--ipt-hvr-bg-color: #f8f9fa;
     --botones__container--ipt-hvr-br-color: #dadce0;
     --botones__container--ipt-hvr-bs-config: 0 1px 1px rgba(0,0,0,.1);
+
+    --background__footer: #F2F2F2;
 }
 
 * {
@@ -26,6 +28,7 @@ html {
 body {
     width: 100vw;
     height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
@@ -40,6 +43,7 @@ body {
     align-items: center;
     width: 90%;
     justify-content: space-evenly;
+    max-width: 350px;
 
 }
 .hn__menu {
@@ -48,7 +52,7 @@ body {
     font-size: 1.3rem;
     width: 34%;
     justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
+   
    
 }
 .menu__item > a {
@@ -68,7 +72,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 70%;
+    height: 65%;
 }
 .main__content figure {
     width: 100%;
@@ -79,6 +83,8 @@ body {
     width: 85%;
     text-align: center;
     margin: 0 auto;
+    max-width: 292px;
+    max-height: 92px;
     
 
 }
@@ -91,6 +97,7 @@ body {
     border: 0.1rem solid var(--buscador__container--br-color);
     border-radius: 2em;
     margin-top: 2rem;
+    max-width: 584px;
     
 }
 .buscador__container:hover, .active {
@@ -99,6 +106,7 @@ body {
 
 .container__img img {
     width: 100%;
+  
    
 }
 .buscador__container--ipt {
@@ -106,6 +114,7 @@ body {
     outline: none;
     flex-grow: 1;
     padding: 0 1rem;
+  
 }
 .botones__container {
     display: flex;
@@ -128,3 +137,72 @@ body {
     background-color: var(--botones__container--ipt-hvr-bg-color);
     box-shadow: var(--botones__container--ipt-hvr-bs-config);
 }
+.bottom__container {
+    align-self: center;
+    margin-top: 2rem;
+}
+.bottom__container p a {
+    text-decoration: none;
+    
+}
+.footer {
+    background-color: var(--background__footer);
+    width: 100%;
+    height: min-content;
+}
+.footer__first-container {
+    padding: 1.5rem 2rem;
+    border-bottom: 0.1rem solid var(--buscador__container--br-color);
+}
+.footer__second-container, .footer__third-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.footer__second-container a, .footer__third-container a {
+    text-decoration: none;
+    padding: 1.5rem;
+    color: var(--menu__item--color);
+}
+.footer__second-container a:hover, .footer__third-container a:hover{
+    text-decoration: underline;
+    
+}
+@media (min-width: 800px) {
+    .header {
+        height: 10%;
+    }
+    .header__navigation {
+        width: 35%;
+        
+    }
+    .main__content {
+        height: 80%;
+    }
+    .footer {
+        height: min-content;
+        font-size: 14px;
+    }
+    .footer__container-options {
+        display: flex;
+        justify-content: space-between;
+        
+    }
+}
+@media (min-width: 1000px) { 
+    .header {
+        height: 8%;
+    }
+    .header__navigation {
+        width: 30%;
+        max-width: 368px;
+        
+    }
+    .main__content  {
+        padding-top: 10rem;
+    
+    }
+}
+
+
+
